--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,14 +19,18 @@ jobs:
           - windows-2019
           - ubuntu-18.04
           - macos-10.15
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python_version: ['2.7', '3.5', '3.6', '3.7', '3.8']
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python_version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.python_version }}
+    - name: Install Visual C++ for Python 2.7
+      if: matrix.platform == 'windows-2019' && matrix.python_version == '2.7'
+      run: |
+        choco install vcpython27 -f -y
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip tox
@@ -34,4 +38,4 @@ jobs:
       run: |
         python -m tox -vv .
       env:
-        TOXENV: py${{ matrix.python-version }}
+        TOXENV: py${{ matrix.python_version }}
