--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py2.7, py3.5, py3.6, py3.7, py3.8
 deps = 
     pytest
     flake8
+    conan
 commands =
     python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
